--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "custom-autolink-references",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Action for create custom autolinks to external resources",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
