TASK-1213 update notice 3

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
           github_token: ${{ secrets.TOKEN }}
           task_url_pattern: 'https://youtrack.domain.com/youtrack/issue/{{task_number}}'
           task_url_placeholder: '{{task_number}}'
-          task_number_regexp: '^TASK-\\d+'
+          task_number_regexp: '^TASK-\d+'
